# project_hw1

./: README.md  pyproject.toml
src/: README.md  masks.py  processing.py  widget.py
tests/: conftest.py  test_masks.py  test_processing.py  test_widget.py
