[project]
name = "pythonproject-hw-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Ekaterina Gumina",email = "eas9506760668@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[flake8]
max-line-length = 119
exclude = ".git, __pycache__"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude ="(.git)"

[tool.isort]
# Максимальная длина строки
line-length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
